# SCR

./: ACL.pro  ACL.rc  ACL.sln  ACL.vcxproj  ACL.vcxproj.filters  ACLwidget.cpp  ACLwidget.h  ACLwidget.h.autosave  ACLwidget.ui  ACLwidget.ui.autosave  CMakeLists.txt  CaptureVideo_resource.rc  FileSystemWatcher.cpp  FileSystemWatcher.h  ImageScene.cpp  ImageScene.h  Makefile  Makefile.Debug  Makefile.Release  UrAPI.rar  cameraPos.txt  captureVideo.rar  configure - 副本.ini  configure---多面xspot.ini  configure.ini  configure0426机器人末端成型.ini  configure_0226.ini  configure_8_11_Xspot.ini  configure_9_19_新末端和新的Xspot标定 - 副本.ini  configure_Xspotmini2.ini  configure_Xspotmini可用.ini  configure机器人末端+直探针.ini  dialog_setting.cpp  dialog_setting.h  dialog_setting.ui  imagescene_Tibia_ap.cpp  imagescene_Tibia_ap.h  imagescene_Tibia_lat.cpp  imagescene_Tibia_lat.h  imagescene_camera.cpp  (+23 more)
2017-07-12/: 2017-07-12.0000.0000.1.dcm  2017-07-12.0000.0000.10.dcm  2017-07-12.0000.0000.2.dcm  2017-07-12.0000.0000.3.dcm  2017-07-12.0000.0000.4.dcm  2017-07-12.0000.0000.5.dcm  2017-07-12.0000.0000.6.dcm  2017-07-12.0000.0000.7.dcm  2017-07-12.0000.0000.8.dcm  2017-07-12.0000.0000.9.dcm
CArmAngleCalCuLate/: CArmwidget.ui  widget.cpp  widget.h
DcmFile/: CT.1.2.840.113770.2.1.2594953829.2110896889.4210395048  CT.1.2.840.113770.2.1.2756841432.2110896889.3654920734  XA.1.3.12.2.1107.5.12.9.12331.30000018042704270857800000014 (2).dcm
GeneratedFiles/: ui_ACLwidget.h  ui_CArmwidget.h  ui_capturevideowidget.h  ui_dialog_setting.h  ui_ur_class_test.h
ThirdLib/: ThirdLib.rar  libmodbus.rar
(+220 files in other folders)
